tests/fixtures/errors/cli-build-error/src/cli.js
#!/usr/bin/env node
// This file has a shebang that might cause CLI build errors
// depending on how the bundler handles it

console.log('Hello from CLI')
